--- a/css/style.css
+++ b/css/style.css
@@ -3,41 +3,43 @@ body{
     border:0;
     padding: 0;
     margin:1px;
-    background-color: lavender;
+    background: -webkit-linear-gradient(135deg, hsla(0, 100%, 35%, 1) 0%, hsla(285, 80%, 38%, 1) 100%);
     font-size:larger;
 }
 .navigation-ribbon {
-    background-color: black; /* Ribbon color */
-    position: fixed; /* Fixed position at the top */
-    width: 100%; /* Full width */
-    top: 0; /* Align to the top */
-    z-index: 1000; /* Above other elements */
+    background-color: black; 
+    position: fixed;
+    width: 100%; 
+    top: 5px; 
+    z-index: 1000; 
 }
 
 .navigation-ribbon ul {
-    list-style: none; /* Remove default list styles */
-    padding: 0; /* Remove padding */
-    margin: 0; /* Remove margin */
-    display: flex; /* Flex layout for horizontal navigation */
-    justify-content: center; /* Center items */
+    list-style: none; 
+    padding: 0; 
+    margin: 0; 
+    display: flex; 
+    justify-content: center;
+    align-items:center;
 }
 
 .navigation-ribbon li {
-    margin: 0 15px; /* Space between items */
+    margin: 0; 
+    width: 100%;
 }
 
 .navigation-ribbon li a {
-    display: block; /* Make the anchor a block element */
-    color: white; /* Text color */
-    text-decoration: none; /* Remove underline */
-    padding-left:20dvb; /* Padding around links */
-    padding-right:20dvb;
+    display: block; 
+    color: white; 
+    text-decoration: none;
+    text-align: center;
     padding-top: 15px;
     padding-bottom: 15px;
-    height: 100%; /* Ensure the link fills the li height */
-    width: 100%; /* Ensure the link fills the li width */
-    box-sizing: border-box; /* Include padding in the total width/height */
-    transition: background-color 0.3s; /* Smooth background transition */
+    height: 100%;
+    width: 100%; 
+    transition: background-color 0.3s;
 }
-
+.navigation-ribbon li a:hover{
+    background-color: gray;
+}
 
