--- a/css/style.css
+++ b/css/style.css
@@ -118,12 +118,21 @@ button{
 
 .Data h2{
     font-size:xx-large;
-    padding: 20px;
+    padding-left: 20px;
 }
 
 .Data p{
     font-size:large;
     padding-left: 20px;
+}
+
+.Data button{
+    margin-left:15px;
+}
+
+.highlights{
+    display: flex;
+    flex-direction: column;
 }
 
 .Project{
@@ -168,6 +177,7 @@ footer .socials li #linkedin{
     max-width: 60px;
     padding:0;
 }
+
 
 @media screen and (max-width: 840px) {
     .navigation-ribbon {
