--- a/css/style.css
+++ b/css/style.css
@@ -85,8 +85,8 @@ button{
     border-color: var(--spotify-medium-gray);
     border-style: solid;
     border-radius: 15px;
-    width: fit-content;
-    height:99%;
+    width: 10vw;
+    height:50vh;
 }
 #Projects ul{
     padding: 1%;
@@ -130,9 +130,34 @@ button{
     margin-left:15px;
 }
 
-.highlights{
+#highlights {
     display: flex;
-    flex-direction: column;
+    gap: 1rem; /* spacing between items */
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    justify-content: center; /* optional, centre items */
+    flex-wrap: nowrap; /* no wrapping to new line */
+    overflow-x: auto; /* scroll if needed */
+}
+
+
+#highlights li {
+  padding: 1rem;
+  min-width: 200px; /* optional */
+  text-align: center;
+  border-radius: 8px;
+}
+
+#highlights a{
+    color:var(--spotify-white);
+}
+
+#highlights img {
+  max-width: 300px;
+  height: auto;
+  display: block;
+  margin: 0 auto 0.5rem;
 }
 
 .Project{
@@ -232,6 +257,13 @@ footer .socials li #linkedin{
         border:1px;
         border-radius: 10px;
         min-height: 82vh;
+    }
+    .dashboard button{
+        padding-left: 10px;
+    }
+    #highlights{
+        display: flex;
+        flex-direction: column;
     }
     #toggle-projects {
         display: inline;
