--- a/css/style.css
+++ b/css/style.css
@@ -130,6 +130,11 @@ button{
     margin-left:15px;
 }
 
+.Data a{
+    color: var(--spotify-white);
+    margin: 20px;
+}
+
 #highlights {
     display: flex;
     gap: 1rem; /* spacing between items */
@@ -141,6 +146,14 @@ button{
     overflow-x: auto; /* scroll if needed */
 }
 
+.Data #project-img {
+    display: block;
+    width: 500px;
+    align-self: center;
+    margin-left: auto;
+    margin-right: auto;
+    padding-bottom: 20px;
+}
 
 #highlights li {
   padding: 1rem;
@@ -167,6 +180,8 @@ button{
     border: 1px solid var(--spotify-medium-gray);
     border-radius: 10px;
 }
+
+
 footer {
     display: flex;
     justify-content: right;
@@ -190,17 +205,9 @@ footer .socials li{
     margin: 0;
 }
 
-footer .socials li #github{
+footer .socials img{
     max-width: 40px;
-    padding-right: 3px;
-}
-footer .socials li #email{
-    max-width: 70px;
-    padding:0;
-}
-footer .socials li #linkedin{
-    max-width: 60px;
-    padding:0;
+    margin: 5px;
 }
 
 
@@ -256,7 +263,7 @@ footer .socials li #linkedin{
         background: linear-gradient(to bottom, var(--spotify-black), var(--spotify-dark-green));
         border:1px;
         border-radius: 10px;
-        min-height: 82vh;
+        min-height: 83vh;
     }
     .dashboard button{
         padding-left: 10px;
@@ -287,5 +294,13 @@ footer .socials li #linkedin{
     
     #Projects.active {
         display: block;;
+    }
+
+    .Data #project-img{
+        display: block;
+        width: 350px;
+        align-self: center;
+        margin-left: auto;
+        margin-right: auto;
     }
 }
